--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,21 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg" style="background-color: #86b552;" >
+    <div class="container">
+      <a class="navbar-brand" [routerLink]="['/home']">
+        <img src="./assets/images/ecuador.png" alt="" width="50" height="40" class="d-inline-block align-text-top">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/newuser']">Nueva Consulta</a>  
+          </li>
+          
+        </ul>
+      </div>
+    </div>
+  </nav>
