--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
             <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" [routerLink]="['/newuser']">Nueva Consulta</a>  
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/nuevaconsulta']">Nueva Consulta</a>  
           </li>
           
         </ul>
