Modificando componente Home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="container">
+    <div class="text-center">
+        <h1 class="mt-3">Bienvenidos al predictor de Pico y Placa</h1>
+        <h2>Prueba técnica para empresa REMECO</h2>
+        <h3>Realizado por Nemecio Rodríguez</h3>
+        <figure class="mt-5 mb-5">
+            <img src="./assets/images/plate.png" alt="imagen de placa EC" >
+        </figure>
+
+        <button class="btn btn-primary" [routerLink]="['/nuevaconsulta']">Nueva consulta</button>
+    </div>
+</div>
