--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="text-center">
-        <h1 class="mt-3">Bienvenidos al predictor de Pico y Placa</h1>
+        <h1 class="mt-3">Bienvenidos al Predictor de Pico y Placa</h1>
         <h2>Prueba técnica para empresa REMECO</h2>
         <h3>Realizado por Nemecio Rodríguez</h3>
         <figure class="mt-5 mb-5">
