--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -29,7 +29,7 @@
         </div>
 
         
-        <input type="submit" value="Consultar" class="btn btn-primary mt-2" [disabled]="!formModel.valid">
+        <input id="buttonForm" type="submit" value="Consultar" class="btn btn-primary mt-2" [disabled]="!formModel.valid">
         
         <!--{{formModel.valid}} -->
 
